@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
hide circle

class Storage {
    -FILE_DIRECTORY: String
    -BUILD_FILE_PATH: String
    -COMPONENT_FILE_PATH: String
    TYPE_PARAMETER: int
    NAME_PARAMETER: int
    PRICE_PARAMETER: int
    POWER_PARAMETER: int

    +Storage()
    -getParameter(String, int): String
    +saveBuild(BuildManager): void
    +deleteBuild(String, BuildManager): void
    +loadBuild(BuildManager): void
    +saveComponent(Build): void
    +loadComponent(BuildManager): void
}

class Build {
    +addComponent(String, Component): void

}

class BuildManager {
    +addBuild(Build): void
    +getBuilds(String): Map<String, Build>

}

Storage "1"--"1" BuildManager
Storage "1"--"*" Build

@enduml